--- a/vpo-frontend/src/lang/en.json
+++ b/vpo-frontend/src/lang/en.json
@@ -20,7 +20,7 @@
             }
         },
         "nodes": {
-            "gainGraphNode": "Potato",
+            "gainGraphNode": "Gain Graph Node",
             "oscillatorNode": "Oscillator Node",
             "midiToValuesNode": "Midi To Values Node",
             "envelopeNode": "Envelope Node"
