Add registry interpolation

--- a/vpo-frontend/src/lang/en.json
+++ b/vpo-frontend/src/lang/en.json
@@ -24,6 +24,11 @@
                 "dynamic": "Dynamic({{uid}})"
             }
         },
+        "customSockets": {
+            "stream": {
+                "mixer": "Input {{input_number}}"
+            }
+        },
         "nodes": {
             "gainGraphNode": "Gain Node",
             "outputNode": "Output Node",
