Get the client and server to (mostly) communicate

--- a/vpo-frontend/src/lang/en.json
+++ b/vpo-frontend/src/lang/en.json
@@ -35,20 +35,20 @@
             }
         },
         "nodes": {
-            "gainGraphNode": "Gain Node",
-            "outputNode": "Output Node",
-            "oscillatorNode": "Oscillator Node",
-            "midiInNode": "Midi In Node",
-            "midiToValuesNode": "Midi To Values Node",
-            "envelopeNode": "Envelope Node",
-            "biquadFilterNode": "Biquad Filter Node",
-            "mixerNode": "Mixer Node",
-            "expressionNode": "Expression Node",
-            "functionNode": "Function Node",
-            "inputsNode": "Inputs Node",
-            "outputsNode": "Outputs Node",
-            "streamExpressionNode": "Stream Expression Node",
-            "polyphonicNode": "Polyphonic Node"
+            "GainGraphNode": "Gain Node",
+            "OutputNode": "Output Node",
+            "OscillatorNode": "Oscillator Node",
+            "MidiInNode": "Midi In Node",
+            "MidiToValuesNode": "Midi To Values Node",
+            "EnvelopeNode": "Envelope Node",
+            "BiquadFilterNode": "Biquad Filter Node",
+            "MixerNode": "Mixer Node",
+            "ExpressionNode": "Expression Node",
+            "FunctionNode": "Function Node",
+            "InputsNode": "Inputs Node",
+            "OutputsNode": "Outputs Node",
+            "StreamExpressionNode": "Stream Expression Node",
+            "PolyphonicNode": "Polyphonic Node"
         },
         "editor": {
             "create": "Create!",
