--- a/vpo-frontend/src/lang/en.json
+++ b/vpo-frontend/src/lang/en.json
@@ -49,7 +49,8 @@
             "OutputsNode": "Outputs Node",
             "StreamExpressionNode": "Stream Expression Node",
             "PolyphonicNode": "Polyphonic Node",
-            "MidiFilterNode": "Midi Filter Node"
+            "MidiFilterNode": "Midi Filter Node",
+            "MonoSamplePlayerNode": "Mono Sample Player Node"
         },
         "editor": {
             "create": "Create!",
