Initial sample playback (#9)
* Add node

* Get filter node working

* Code tidy

* Start adding asset manager type

* WIP

* Crap

* Use node init state in more places

* More refactoring

* First success with sample playback

* Pass in global state to engine runs

* Add resource property type

* Make loading easier

* Move code around

* Add resource management

* Bugfix

* UI cleanup and bugfixes

* Rename asset manager to resource manager

--- a/vpo-frontend/src/lang/en.json
+++ b/vpo-frontend/src/lang/en.json
@@ -48,7 +48,9 @@
             "InputsNode": "Inputs Node",
             "OutputsNode": "Outputs Node",
             "StreamExpressionNode": "Stream Expression Node",
-            "PolyphonicNode": "Polyphonic Node"
+            "PolyphonicNode": "Polyphonic Node",
+            "MidiFilterNode": "Midi Filter Node",
+            "MonoSamplePlayerNode": "Mono Sample Player Node"
         },
         "editor": {
             "create": "Create!",
