--- a/vpo-frontend/src/lang/en.json
+++ b/vpo-frontend/src/lang/en.json
@@ -36,24 +36,25 @@
             }
         },
         "nodes": {
-            "GainGraphNode": "Gain Node",
-            "OutputNode": "Output Node",
-            "OscillatorNode": "Oscillator Node",
-            "MidiInNode": "Midi In Node",
-            "MidiToValuesNode": "Midi To Values Node",
-            "EnvelopeNode": "Envelope Node",
-            "BiquadFilterNode": "Biquad Filter Node",
-            "MixerNode": "Mixer Node",
-            "ExpressionNode": "Expression Node",
-            "FunctionNode": "Function Node",
-            "InputsNode": "Inputs Node",
-            "OutputsNode": "Outputs Node",
-            "StreamExpressionNode": "Stream Expression Node",
-            "PolyphonicNode": "Polyphonic Node",
-            "MidiFilterNode": "Midi Filter Node",
-            "MonoSamplePlayerNode": "Mono Sample Player Node",
-            "WavetableNode": "Wavetable Oscillator Node",
-            "PortamentoNode": "Portamento Node"
+            "GainGraphNode": "Gain",
+            "OutputNode": "Output",
+            "OscillatorNode": "Oscillator",
+            "MidiInNode": "Midi In",
+            "MidiToValuesNode": "Midi To Values",
+            "EnvelopeNode": "Envelope",
+            "BiquadFilterNode": "Filter (12db/octave)",
+            "MixerNode": "Mixer",
+            "ExpressionNode": "Expression",
+            "FunctionNode": "Function",
+            "InputsNode": "Inputs",
+            "OutputsNode": "Outputs",
+            "StreamExpressionNode": "Stream Expression",
+            "PolyphonicNode": "Polyphonic",
+            "MidiFilterNode": "Midi Filter",
+            "MonoSamplePlayerNode": "Mono Sample Player",
+            "WavetableNode": "Wavetable Oscillator",
+            "PortamentoNode": "Portamento",
+            "ButtonNode": "Button"
         },
         "editor": {
             "create": "Create!",
