Implement hidden node row

--- a/vpo-frontend/src/lang/en.json
+++ b/vpo-frontend/src/lang/en.json
@@ -23,6 +23,8 @@
                 "sustain": "Sustain",
                 "release": "Release",
                 "speed": "Speed",
+                "state": "State",
+                "uiState": "UiState",
                 "dynamic": "Dynamic({{uid}})"
             }
         },
