Get native build working

--- a/vpo-frontend/src/lib/lang/en.json
+++ b/vpo-frontend/src/lib/lang/en.json
@@ -38,7 +38,7 @@
             }
         },
         "nodes": {
-            "GainGraphNode": "Gain",
+            "GainNode": "Gain",
             "OutputNode": "Output",
             "OscillatorNode": "Oscillator",
             "MidiInNode": "Midi In",
